--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 center-align">
-                    <h1 id="heading">Welcome to SIT 725 Week 3</h1>
-                    <p class="flow-text">This is a demo application that tries to use a few components from materialize
-                        and through this practical we try to have some fun with Materialize and its components</p>
+                    <h1 id="heading">KITTEN DEN</h1>
+                    <p class="flow-text">Are you a cat person?? Are you NOT a cat person?? Doesn't matter ! Come visit us at the KITTEN DEN to
+                        pet cute little feline friends. Register below now !!
+                    </p>
                 </div>
                 <div class="col s12 center-align">
-                    <img class="materialboxed materialboxed-image" src="images/livedemo.png">
+                    <img class="materialboxed materialboxed-image" src="images/small-catt.png">
                 </div>
                 <div class="col s12 center-align">
                     <a class="waves-effect waves-light btn click-me-button modal-trigger" data-target="modal1" id="clickMeButton"><i
-                            class="material-icons left">auto_fix_high</i>Click Me</a>
+                            class="material-icons left">auto_fix_high</i>Click Me to Register</a>
                 </div>
             </div>
             <div id="card-section" class="row">
